whitespace cleanup, replace contant by preprocessor symbol

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,230 @@ core
 *.swo
 *.swl
 *.swm
+
+
+# various binaries produced during build/test
+
+large-chunk
+mlton/26065.sml
+parser
+reg.out
+regression.output
+regression/FuhMishra
+regression/binio
+regression/callcc2
+regression/cycle
+regression/datatype-with-free-tyvars
+regression/date
+regression/dead
+regression/deep-flatten
+regression/default-overloads
+regression/down
+regression/eq
+regression/eqtype
+regression/ex
+regression/exhaustive
+regression/exn
+regression/exn2
+regression/expansive-valbind
+regression/exponential
+regression/fact
+regression/fast
+regression/fast2
+regression/ffi
+regression/ffi-opaque
+regression/fft
+regression/filesys
+regression/finalize
+regression/finalize.2
+regression/finalize.3
+regression/finalize.4
+regression/finalize.5
+regression/finalize.6
+regression/fixed-integer
+regression/flat-array
+regression/flat-array.2
+regression/flat-array.3
+regression/flat-vector
+regression/flexrecord
+regression/flexrecord.2
+regression/format
+regression/ftruncate
+regression/functor
+regression/gc-collect
+regression/general
+regression/grow-raise
+regression/harmonic
+regression/hello-world
+regression/id
+regression/ieee-real
+regression/int
+regression/int-inf.0
+regression/int-inf.1
+regression/int-inf.2
+regression/int-inf.3
+regression/int-inf.4
+regression/int-inf.5
+regression/int-inf.bitops
+regression/int-inf.compare
+regression/int-inf.log2
+regression/int-inf.rep1
+regression/int-inf.rep2
+regression/int-inf.rep3
+regression/int-inf.rep4
+regression/int-inf.rep5
+regression/int-overflow
+regression/jump
+regression/kitdangle
+regression/kitdangle3
+regression/kitfib35
+regression/kitkbjul9
+regression/kitlife35u
+regression/kitloop2
+regression/kitmandelbrot
+regression/kitqsort
+regression/kitreynolds2
+regression/kitreynolds3
+regression/kitsimple
+regression/kittmergesort
+regression/kkb36c
+regression/kkb_eq
+regression/klife_eq
+regression/known-case0
+regression/known-case1
+regression/lambda-list-ref
+regression/layout
+regression/lex
+regression/lib
+regression/life
+regression/list
+regression/listpair
+regression/llv
+regression/local-ref
+regression/math
+regression/mlton.overload
+regression/mlton.share
+regression/mlton.word
+regression/modules
+regression/msort
+regression/mutex
+regression/nested-loop
+regression/nextAfter
+regression/nonexhaustive
+regression/once
+regression/only-one-exception
+regression/opaque
+regression/opaque2
+regression/open
+regression/os-exit
+regression/overloading
+regression/pack
+regression/pack-real
+regression/pack-real.2
+regression/pack-word
+regression/parse
+regression/pat
+regression/poly-equal
+regression/poly-equal.2
+regression/polymorphic-recursion
+regression/posix-exit
+regression/posix-procenv
+regression/print-self
+regression/prodcons
+regression/pseudokit
+regression/real
+regression/real-algsimp
+regression/real-basic
+regression/real-decimal.1
+regression/real-int
+regression/real-sign
+regression/real-str
+regression/redundant.1
+regression/ref-flatten
+regression/ref-flatten.2
+regression/ref-flatten.3
+regression/ref-flatten.4
+regression/ref-flatten.5
+regression/ref-flatten.6
+regression/rem-unused.1
+regression/ring
+regression/rlimit
+regression/same-fringe
+regression/scon
+regression/semicolon
+regression/signals
+regression/signals2
+regression/signals3
+regression/signals4
+regression/sigs
+regression/size
+regression/size2
+regression/slow
+regression/slow2
+regression/slower
+regression/smith-normal-form
+regression/socket
+regression/string
+regression/string.fromString
+regression/string2
+regression/stringcvt
+regression/substring
+regression/substring-overflow
+regression/suspend
+regression/tak
+regression/taut
+regression/test-create
+regression/test-spawn
+regression/testMatrix
+regression/testdyn1
+regression/textio
+regression/textio.2
+regression/thread-switch
+regression/thread-switch-share
+regression/thread-switch-size
+regression/thread0
+regression/thread1
+regression/thread2
+regression/time
+regression/time2
+regression/time3
+regression/time4
+regression/timeout
+regression/tststrcmp
+regression/type-check
+regression/typespec
+regression/unary
+regression/unary.2
+regression/undetermined
+regression/unixpath
+regression/useless-string
+regression/valrec
+regression/vector
+regression/vector-loop
+regression/vector2
+regression/vector3
+regression/vector4
+regression/weak
+regression/weak.2
+regression/weak.3
+regression/weird-word1
+regression/weird-word2
+regression/where
+regression/where-and
+regression/widechar
+regression/withtype
+regression/withtype2
+regression/withtype3
+regression/withtype4
+regression/withtype5
+regression/word
+regression/word-all
+regression/word8array
+regression/word8vector
+regression/wordn-array
+regression/x
+regression/x.sml
+ub/fib
+ub/gcbench
+ub/justprint
+ub/real
