--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,87 @@ ub/fib
 ub/gcbench
 ub/justprint
 ub/real
+
+
+CDSml/graphs/.ipynb_checkpoints/
+CDSml/graphs/cd_mlton.pdf
+CDSml/graphs/cd_rtmlton.pdf
+CDSml/runCD
+benchmark/b.out
+benchmark/tests/doit
+benchmark/tests/doit.sml
+benchmark/tests/doit.sml-rtmlton-stats
+benchmark/tests/filelist.txt
+benchmark/tests/script.out
+benchmark/tests/script2.out
+benchmark/tests/zern.mlton
+regression/1
+regression/10
+regression/11
+regression/12
+regression/13
+regression/14
+regression/15
+regression/16
+regression/17
+regression/18
+regression/19
+regression/2
+regression/20
+regression/21
+regression/22
+regression/23
+regression/3
+regression/4
+regression/5
+regression/6
+regression/7
+regression/8
+regression/9
+regression/abcde
+regression/abstype
+regression/all-overloads
+regression/args-create
+regression/args-spawn
+regression/array
+regression/array2
+regression/array3
+regression/array4
+regression/array5
+regression/array6
+regression/array7
+regression/asterisk
+regression/basis-sharing
+regression/big-array
+regression/bool-triple
+regression/bytechar
+regression/callcc
+regression/callcc3
+regression/cases
+regression/char.scan
+regression/char0
+regression/check_arrays
+regression/circular
+regression/cmdline
+regression/cobol
+regression/command-line
+regression/comment-end
+regression/common-subexp0
+regression/constraint
+regression/conversion
+regression/jeff
+regression/mutex.3.c
+regression/sharing
+regression/textio.mlb
+regression/xxx
+regression2.out
+regression3.out
+runtime/ml_array_payload-
+runtime/ml_object*
+runtime/mlmon.out
+runtime/splitheader
+runtime/umarray-allocate-test
+runtime/umarray-allocate-test.c
+ub/arraytest
+ub/last
+ub/rstrip
