--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,27 @@ sudo: required
 
 matrix:
   include:
-  - os:   linux
-    env:  CC=gcc    MLTON_COMPILE_ARGS="-codegen c"      REGRESSION=false
-  #- os:   linux
-  #  env:  CC=clang  MLTON_COMPILE_ARGS="-codegen c"      REGRESSION=false
-
-install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
-
-services:
-  - docker
-
-script:
-  - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-docker\""
-
+  - stage: Build RTMLton
+    os:   linux
+    env:  CC=gcc    MLTON_COMPILE_ARGS="-codegen c" 
+    install:
+      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
+      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
+    services:
+      - docker
+    script:
+      - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-build\""
+  - stage: regression-part1
+    os: linux
+    env: CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-1"
+    install:
+      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
+      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
+    services:
+      - docker
+    script:
+      - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
+  
 
 notifications:
   email: false
