--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,23 @@ sudo: required
 
 jobs:
   include:
+  - &test
+    stage: Regression tests
+    os: linux
+    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-1"
+    install:
+      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
+      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
+    services:
+      - docker
+    script:
+      - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
+  - <<: *test 
+    env : -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-2"
+  - <<: *test
+    env : -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-3"
+  - <<: *test
+    env : -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-4"
   - stage: Build RTMLton
     os:   linux
     env:  CC=gcc    MLTON_COMPILE_ARGS="-codegen c" 
@@ -15,29 +32,6 @@ jobs:
       - docker
     script:
       - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-build\""
-  - stage: Regression tests
-    os: linux
-    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-1"
-    install:
-      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
-      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
-    services:
-      - docker
-    script:
-      - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
-  - os: linux
-    env : -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-2"
-    script:
-      - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
-  - os: linux
-    env : -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-3"
-    script:
-      - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
-  - os: linux
-    env : -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-4"
-    script:
-      - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
-  
 
 notifications:
   email: false
