--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jobs:
   include:
   - stage: Regression tests
     os: linux
-    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-1"
+    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" PART="-p part-1"
     install:
       - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
       - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
@@ -17,7 +17,7 @@ jobs:
       - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
   - stage: Regression tests
     os: linux
-    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-2"
+    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" PART="-p part-2"
     install:
       - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
       - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
@@ -27,7 +27,7 @@ jobs:
       - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
   - stage: Regression tests
     os: linux
-    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-3"
+    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" PART="-p part-3"
     install:
       - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
       - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
@@ -37,7 +37,7 @@ jobs:
       - "docker run -i -v \"${PWD}:/RTMLton\" i386/ubuntu:xenial /bin/bash -c \"linux32 --32bit i386 /RTMLton/bin/travis-regression\""
   - stage: Regression tests
     os: linux
-    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" REGRESSION="-p part-4"
+    env: -CC=gcc    MLTON_COMPILE_ARGS="-codegen c" PART="-p part-4"
     install:
       - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update;        fi
       - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq mlton; fi
