--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -39,7 +39,7 @@ CPPFLAGS :=
 CFLAGS := -D_GNU_SOURCE -D_USE_GNU  $(CFLAGS)
 
 WARNXCFLAGS :=
-WARNXCFLAGS += -Wall
+WARNXCFLAGS += -Wall -Werror
 ifeq ($(findstring $(GCC_MAJOR_VERSION), 3),$(GCC_MAJOR_VERSION))
 WARNXCFLAGS += -W
 endif
