--- a/ub/rtems/justprint/Makefile
+++ b/ub/rtems/justprint/Makefile
@@ -1,5 +1,5 @@
 all:
 	tar -xpf ../../../runtime/rtems_waf.tar
-	./waf configure --rtems=$$HOME/quick-start/rtems/6 --rtems-bsp=i386/pc386
+	./waf configure --rtems=/opt/rtems6 --rtems-bsp=i386/pc386
 	./waf
-	$$HOME/quick-start/rtems/6/bin/rtems-run --rtems-bsps=pc-qemu  ./build/i386-rtems6-pc386/hello.exe 
+	/opt/rtems6/bin/rtems-run --rtems-bsps=pc-qemu  ./build/i386-rtems6-pc386/hello.exe 
