--- a/ub/rtlinux/Makefile
+++ b/ub/rtlinux/Makefile
@@ -2,5 +2,5 @@ c:
 	gcc -o deadline deadlinesyscall.c -lpthread
 
 sml:
-	../../build/bin/mlton periodic.sml
+	../../build/bin/mlton -debug true periodic.sml
 	sudo ./periodic @RTMLton rtthreads true -- 
